--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");
 
 /* From https://www.toptal.com/designers/subtlepatterns/light-veneer/ */
+/* background: linear-gradient(rgba(132, 78, 53, 0.8), rgba(132, 75, 53, 0.8)), */
+/* background: url("./images/wood 2.jpg"); */
+/* background-size: cover; */
+/* radial-gradient(ellipse at top, pink 50%, rgba(132, 75, 53, 0.8)),
+radial-gradient(ellipse at bottom, pink 50%, rgba(132, 75, 53, 0.8)); */
+
+/* linear-gradient(to bottom, #f6e1ec50, #d472a680), */
 
 body {
-  background: linear-gradient(rgba(165, 42, 42, 0.7), rgba(165, 42, 42, 0.7)),
-    url("./images/light-veneer.png");
+  background: linear-gradient(#ffffff40, #ffffff40),
+    radial-gradient(ellipse, #f6e1ec50, #f77dbe60), url("./images/wood.jpg");
+  background-size: cover;
+  min-height: 100vh;
 }
 
 /* background: center / contain no-repeat url("../../media/examples/firefox-logo.svg"),
