--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -2,47 +2,57 @@
   box-sizing: border-box;
   align-self: center;
   background: transparent;
-  padding: 1rem 1rem;
+  padding: 0.5rem 1rem;
   margin: 0 1rem;
   transition: all 0.5s ease;
-  color: #41403e;
-  font-size: 2rem;
+  font-size: 1.5rem;
   letter-spacing: 1px;
   outline: none;
   box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
   border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
   border: solid;
+  position: relative;
+  border-width: 2px;
+}
+
+.centred {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.bg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  mask-image: url(../images/stroke.png);
+  mask-size: 150%;
+  width: 100%;
+  height: 100%;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  text-align: center;
+  display: table;
+}
+
+.bgInverted {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  mask-image: url(../images/stroke inverted.png);
+  mask-size: 115%;
+  width: 100%;
+  height: 100%;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  text-align: center;
+  display: table;
 }
 
 button:hover {
   box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
 }
-/*
-      Above is shorthand for:
-      border-top-left-radius: 255px 15px;
-      border-top-right-radius: 15px 225px;
-      border-bottom-right-radius: 225px 15px;
-      border-bottom-left-radius:15px 255px;
-      */
-/* &:hover{
-         box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
-      } 
-      &.lined.thick{
-         border:solid 7px #41403E;
-      }
-      &.dotted.thick{
-         border:dotted 5px #41403E;
-      }
-      &.dashed.thick{
-        border:dashed 5px #41403E;
-      }
-       &.lined.thin{
-         border:solid 2px #41403E;
-      }
-      &.dotted.thin{
-         border:dotted 2px #41403E;
-      }
-      &.dashed.thin{
-        border:dashed 2px #41403E;
-      }
-    } */
