--- a/src/styles/paper.module.css
+++ b/src/styles/paper.module.css
@@ -44,7 +44,6 @@
   font-size: 19px;
   letter-spacing: 1px;
   word-spacing: 5px;
-  /* height: 700px; */
   display: flex;
   flex-direction: column;
 }
@@ -58,7 +57,26 @@
 .header {
   position: absolute;
   top: 20px;
-  height: 20px;
-  left: 0;
+  height: fit-content;
+  left: 40px;
+  right: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0 1rem;
+}
+
+.footer {
+  position: absolute;
+  bottom: 60px;
+  left: 40px;
+  height: 50px;
   right: 0;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  font-size: small;
+  line-height: 25px;
 }
