--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -15,6 +15,23 @@
   border-width: 2px;
 }
 
+.buttonSmall {
+  box-sizing: border-box;
+  align-self: center;
+  background: transparent;
+  padding: 0.1rem 0.5rem;
+  margin: 0 1rem;
+  transition: all 0.5s ease;
+  font-size: 1.25rem;
+  letter-spacing: 1px;
+  outline: none;
+  box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+  border: solid;
+  position: relative;
+  border-width: 2px;
+}
+
 .centred {
   display: table-cell;
   vertical-align: middle;
