--- a/src/styles/switch.module.css
+++ b/src/styles/switch.module.css
@@ -8,9 +8,7 @@
 
 /* Hide default HTML checkbox */
 .switcher input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+  opacity: 50%;
 }
 
 /* The slider */
