--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -3,7 +3,6 @@
   align-self: center;
   background: transparent;
   padding: 0.5rem 1rem;
-  margin: 0 1rem;
   transition: all 0.5s ease;
   font-size: 1.5rem;
   letter-spacing: 1px;
@@ -21,7 +20,6 @@
   align-self: center;
   background: transparent;
   padding: 0.1rem 0.5rem;
-  margin: 0 1rem;
   transition: all 0.5s ease;
   font-size: 1.25rem;
   letter-spacing: 1px;
@@ -61,7 +59,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   color: black;
-  mask-image: url(../images/stroke inverted.png);
+  mask-image: url(../images/stroke_inverted.png);
   mask-size: 115%;
   width: 100%;
   height: 100%;
