--- a/src/styles/paper.module.css
+++ b/src/styles/paper.module.css
@@ -15,10 +15,10 @@
   box-shadow: 0px 0px 5px 0px #888;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
   .paper {
-    /* width: 100%; */
-    margin: 15px auto;
+    width: calc(100% - 20px);
+    margin: 10px;
     height: fit-content;
     min-height: 100vh;
   }
@@ -66,11 +66,20 @@
   word-spacing: 5px;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 @media only screen and (min-width: 600px) {
   .content {
     padding-left: 56px;
+    padding-right: 16px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .content {
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
 
