--- a/src/styles/diagram.module.css
+++ b/src/styles/diagram.module.css
@@ -2,34 +2,12 @@
   z-index: 0;
   position: relative;
   overflow: clip;
+  margin-top: 1rem;
 }
 
 .diagram {
   position: absolute;
   left: 50%;
+  width: 42rem;
   transform: translateX(-50%);
-}
-
-/* Desktop */
-@media only screen and (min-width: 415px) {
-  .container {
-    height: 400px;
-  }
-  .diagram {
-    height: 400px;
-    width: 42rem;
-  }
-}
-
-/* Mobile */
-@media only screen and (max-width: 414px) {
-  .container {
-    height: 300px;
-  }
-  .diagram {
-    height: 20rem;
-    width: 42rem;
-    top: -10%;
-    margin-bottom: 1rem;
-  }
 }
