--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -14,8 +14,30 @@
   border-width: 2px;
 }
 
+.buttonBig {
+  box-sizing: border-box;
+  align-self: center;
+  background: transparent;
+  padding: 1rem 1.5rem;
+  transition: all 0.5s ease;
+  font-size: 2rem;
+  letter-spacing: 1px;
+  outline: none;
+  box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+  border: solid;
+  position: relative;
+  border-width: 2px;
+}
+
+@media only screen and (max-width: 420px) {
+  .buttonBig {
+    font-size: 1.5rem;
+    padding: 0.4rem 1.8rem;
+  }
+}
+
 .buttonSmall {
-  height: 38px;
   box-sizing: border-box;
   align-self: center;
   background: transparent;
@@ -71,4 +93,16 @@
 
 button:hover {
   box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, 0.3);
+}
+
+.photos {
+  color: black;
+  mask-image: url(../images/stroke_inverted.png);
+  mask-size: 200%;
+  mask-repeat: no-repeat;
+  mask-position: center;
+
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
