--- a/src/styles/paper.module.css
+++ b/src/styles/paper.module.css
@@ -11,6 +11,7 @@
   position: relative;
   margin: 20px auto;
   padding: 40px 0;
+  /* 50 px for the alternative options */
   background-color: white;
   box-shadow: 0px 0px 5px 0px #888;
 }
@@ -85,6 +86,7 @@
 
 .header {
   position: absolute;
+  /* top: 10px; */
   top: 20px;
   height: fit-content;
   left: 40px;
