--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -101,8 +101,5 @@ button:hover {
   mask-size: 200%;
   mask-repeat: no-repeat;
   mask-position: center;
-
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+  opacity: 90%;
 }
