--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -2,9 +2,7 @@
   box-sizing: border-box;
   align-self: center;
   background: transparent;
-  padding: 0.5rem 1rem;
   transition: all 0.5s ease;
-  font-size: 1.5rem;
   letter-spacing: 1px;
   outline: none;
   box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
@@ -12,83 +10,29 @@
   border: solid;
   position: relative;
   border-width: 2px;
+  overflow: hidden;
 }
 
-.buttonBig {
-  box-sizing: border-box;
-  align-self: center;
-  background: transparent;
+.medium {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+}
+
+.big {
   padding: 1rem 1.5rem;
-  transition: all 0.5s ease;
   font-size: 2rem;
-  letter-spacing: 1px;
-  outline: none;
-  box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
-  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
-  border: solid;
-  position: relative;
-  border-width: 2px;
 }
 
 @media only screen and (max-width: 420px) {
-  .buttonBig {
+  .big {
     font-size: 1.5rem;
     padding: 0.4rem 1.8rem;
   }
 }
 
-.buttonSmall {
-  box-sizing: border-box;
-  align-self: center;
-  background: transparent;
-  padding: 0.1rem 0.5rem;
-  transition: all 0.5s ease;
+.small {
+  padding: 0.2rem 0.5rem;
   font-size: 1.25rem;
-  letter-spacing: 1px;
-  outline: none;
-  box-shadow: 20px 38px 34px -26px hsla(0, 0%, 0%, 0.2);
-  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
-  border: solid;
-  position: relative;
-  border-width: 2px;
-}
-
-.centred {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-}
-
-.bg {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-  mask-image: url(../images/backgrounds/stroke.png);
-  mask-size: 150%;
-  width: 100%;
-  height: 100%;
-  mask-repeat: no-repeat;
-  mask-position: center;
-  text-align: center;
-  display: table;
-}
-
-.bgInverted {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-  mask-image: url(../images/backgrounds/stroke_inverted.png);
-  mask-size: 115%;
-  width: 100%;
-  height: 100%;
-  mask-repeat: no-repeat;
-  mask-position: center;
-  text-align: center;
-  display: table;
 }
 
 button:hover {
